--- a/_notebooks/2022-11-16-Video-Notes.ipynb
+++ b/_notebooks/2022-11-16-Video-Notes.ipynb
@@ -4,28 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.3 Notes Video 1"
+    "# 3.3-4 Notes\n",
+    "> \n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- sticky_rank: 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.3 Notes Video 2"
+    "## 3.3 Notes Video 1\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.3 Notes Video 3"
+    "## 3.3 Notes Video 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.4 Notes Video 1"
+    "## 3.3 Notes Video 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.4 Notes Video 1"
    ]
   }
  ],
