--- a/_notebooks/2022-11-16-Video-Notes.ipynb
+++ b/_notebooks/2022-11-16-Video-Notes.ipynb
@@ -92,6 +92,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- algorithm- finite set of instructions that accomplish a specific task, composed of sequencing, selection, and iteration. \n",
+    "- sequencing- outline or set of steps that we do and follow in order that they are given \n",
+    "- variable- you can store an actual value, the value of a variable in another variable, the result of an operation, or result of a procedural call\n",
+    "\n",
+    "Practice: calculate and display average of 25, 43, and 18\n",
+    "- num 1 <-- 25\n",
+    "- num 2 <-- 43\n",
+    "- num 3 <-- 18\n",
+    "- average <-- (num 1 + num 2 + num 3)/3 \n",
+    "- display average \n",
+    "= 28.667"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.3 Notes Video 3"
    ]
   },
