--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -40,7 +40,17 @@ Selection: Step 3
 Iteration: Step 4 
 
 ## 3.3 Video 2
+- algorithm- finite set of instructions that accomplish a specific task, composed of sequencing, selection, and iteration. 
+- sequencing- outline or set of steps that we do and follow in order that they are given 
+- variable- you can store an actual value, the value of a variable in another variable, the result of an operation, or result of a procedural call
 
+Practice: calculate and display average of 25, 43, and 18
+- num 1 <-- 25
+- num 2 <-- 43
+- num 3 <-- 18
+- average <-- (num 1 + num 2 + num 3)/3 
+- display average 
+= 28.667
 ## 3.3 Video 3
 
 ## 3.4 Video 1
