--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.3 Arithmetic Operations in Expressions Assignment \n",
-    "- title: CB 3.3 Topic HW\n",
+    "# Hacks\n",
+    "- title: Homework Assignment for 3.3-4\n",
     "- toc: true\n",
     "- tags: [hw]"
    ]
@@ -14,8 +14,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plan for Assignment: \n",
-    "- Explain the topic and then make practice problems for class to try, then I want to have them create their own CollegeBoard with certain requirements. \n"
+    "## 3.3 Video 1 Hacks\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Video 2 Hacks\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Video 3 Hacks\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.4 Video 1 Hacks\n",
+    "\n"
    ]
   }
  ],
