--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -54,3 +54,32 @@ Practice: calculate and display average of 25, 43, and 18
 ## 3.3 Video 3
 
 ## 3.4 Video 1
+#### Big Idea: Strings
+
+#### Goal: To evaluate expressions that manipulate strings
+Vocab and Examples:
+
+String: a sequence of characters
+
+1. Len: finds the number of characters in a string
+
+    len("school")
+
+    Result:
+    "5"
+------------------------------------------------------------
+2. String concatenation: combines two or more strings into one
+
+    concat("computers", "arecool" )
+
+    Result:
+    "computersarecool"
+------------------------------------------------------------
+3. Substring: a part of a existing string
+
+    substring("APCSPrinciples", 3, 6)
+
+    Result:
+    "CSPrin"
+
+    Starts at the 3rd character ("C") and takes 6 characters after that ("SPrin), then in all ("CSPrin")
