--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -15,7 +15,69 @@
    "metadata": {},
    "source": [
     "## 3.3 Video 1 Hacks\n",
-    "\n"
+    "\n",
+    "I will show example of a piece of code and the student has to label which one is the sequence, selection, and iteration. There will be two examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# These are all the steps that the computer goes through so this is sequencing\n",
+    "\n",
+    "numbers = [0,1,2,3,4,5,6,7,8,9,10]\n",
+    "evens = []\n",
+    "\n",
+    "# This is selection where they go through the numbers and decide whether if it is even or not. \n",
+    "for i in numbers:\n",
+    "    # This is iteration because they repeat the steps until they go through all the numbers in the list. \n",
+    "    if (numbers[i] % 2 == 0):\n",
+    "        evens.append(numbers[i])\n",
+    "\n",
+    "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The objective is to make a pyramid of stars\n",
+    "# This is the sequence\n",
+    "i = 1\n",
+    "starString = \"*\"\n",
+    "# This is iteration because they repeat until i reaches 5\n",
+    "while i <= 5:\n",
+    "  j = 1\n",
+    "  # This is the selection where they decide what j is\n",
+    "  while j <= i:\n",
+    "    print (\"*\", end= \"\")\n",
+    "    j += 1\n",
+    "  print ()\n",
+    "  i += 1"
    ]
   },
   {
@@ -50,8 +112,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
