--- a/_notebooks/2022-22-17-3.3-Topics-HW.ipynb
+++ b/_notebooks/2022-22-17-3.3-Topics-HW.ipynb
@@ -17,6 +17,28 @@
     "## Plan for Assignment: \n",
     "- Explain the topic and then make practice problems for class to try, then I want to have them create their own CollegeBoard with certain requirements. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Practice Problem #1\n",
+    "a <-- 12\n",
+    "\n",
+    "b <-- 3\n",
+    "\n",
+    "c <-- 8\n",
+    "\n",
+    "d <-- 5\n",
+    "\n",
+    "a <-- b\n",
+    "\n",
+    "b <-- c + d\n",
+    "\n",
+    "d <-- b \n",
+    "\n",
+    "find the value for a, b, c, d "
+   ]
   }
  ],
  "metadata": {
