--- a/_notebooks/2022-22-17-3.3-Topics-HW.ipynb
+++ b/_notebooks/2022-22-17-3.3-Topics-HW.ipynb
@@ -17,44 +17,22 @@
     "## Plan for Assignment: \n",
     "- Explain the topic and then make practice problems for class to try, then I want to have them create their own CollegeBoard with certain requirements. \n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Practice Problem #1\n",
-    "a <-- 12\n",
-    "\n",
-    "b <-- 3\n",
-    "\n",
-    "c <-- 8\n",
-    "\n",
-    "d <-- 5\n",
-    "\n",
-    "a <-- b\n",
-    "\n",
-    "b <-- c + d\n",
-    "\n",
-    "d <-- b \n",
-    "\n",
-    "find the value for a, b, c, d "
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
