--- a/_posts/2022-11-17-Hacks.md
+++ b/_posts/2022-11-17-Hacks.md
@@ -18,97 +18,10 @@ layout: notebook
         
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="3.3-Video-1-Hacks">3.3 Video 1 Hacks<a class="anchor-link" href="#3.3-Video-1-Hacks"> </a></h2><p>I will show example of a piece of code and the student has to label which one is the sequence, selection, and iteration. There will be two examples.</p>
-
+<h2 id="3.3-Video-1-Hacks">3.3 Video 1 Hacks<a class="anchor-link" href="#3.3-Video-1-Hacks"> </a></h2>
 </div>
 </div>
 </div>
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">numbers</span> <span class="o">=</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">,</span><span class="mi">6</span><span class="p">,</span><span class="mi">7</span><span class="p">,</span><span class="mi">8</span><span class="p">,</span><span class="mi">9</span><span class="p">,</span><span class="mi">10</span><span class="p">]</span>
-<span class="n">evens</span> <span class="o">=</span> <span class="p">[]</span>
-
-<span class="c1"># This is selection where they go through the numbers and decide whether if it is even or not. </span>
-<span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">numbers</span><span class="p">:</span>
-    <span class="c1"># This is iteration because they repeat the steps until they go through all the numbers in the list. </span>
-    <span class="k">if</span> <span class="p">(</span><span class="n">numbers</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">0</span><span class="p">):</span>
-        <span class="n">evens</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">numbers</span><span class="p">[</span><span class="n">i</span><span class="p">])</span>
-
-<span class="nb">print</span><span class="p">(</span><span class="n">evens</span><span class="p">)</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-<div class="output_area">
-
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>[0, 2, 4, 6, 8, 10]
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
-</div>
-    {% endraw %}
-
-    {% raw %}
-    
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># This is the sequence</span>
-<span class="n">i</span> <span class="o">=</span> <span class="mi">1</span>
-<span class="n">starString</span> <span class="o">=</span> <span class="s2">&quot;*&quot;</span>
-<span class="c1"># This is iteration because they repeat until i reaches 5</span>
-<span class="k">while</span> <span class="n">i</span> <span class="o">&lt;=</span> <span class="mi">5</span><span class="p">:</span>
-  <span class="n">j</span> <span class="o">=</span> <span class="mi">1</span>
-  <span class="c1"># This is the selection where they decide what j is</span>
-  <span class="k">while</span> <span class="n">j</span> <span class="o">&lt;=</span> <span class="n">i</span><span class="p">:</span>
-    <span class="nb">print</span> <span class="p">(</span><span class="s2">&quot;*&quot;</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="p">)</span>
-    <span class="n">j</span> <span class="o">+=</span> <span class="mi">1</span>
-  <span class="nb">print</span> <span class="p">()</span>
-  <span class="n">i</span> <span class="o">+=</span> <span class="mi">1</span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-<div class="output_area">
-
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>*
-**
-***
-****
-*****
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
-</div>
-    {% endraw %}
-
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="3.3-Video-2-Hacks">3.3 Video 2 Hacks<a class="anchor-link" href="#3.3-Video-2-Hacks"> </a></h2>
@@ -123,7 +36,30 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="3.4-Video-1-Hacks">3.4 Video 1 Hacks<a class="anchor-link" href="#3.4-Video-1-Hacks"> </a></h2>
+<h2 id="3.4-Video-1-Hacks">3.4 Video 1 Hacks<a class="anchor-link" href="#3.4-Video-1-Hacks"> </a></h2><h3 id="String-Homework">String Homework<a class="anchor-link" href="#String-Homework"> </a></h3><hr>
+<h3 id="Test-1">Test 1<a class="anchor-link" href="#Test-1"> </a></h3>
+<pre><code>firstName &lt;- "Bob"
+lastName &lt;- "Smith"
+var &lt;- substring(firstName, 1, 1)
+name &lt;- concat(lastName, var)
+email &lt;- concat(name, "@gmail.com")
+DISPLAY(email)
+
+</code></pre>
+<p>What would the result be?</p>
+<h6 id="Hint:">Hint:<a class="anchor-link" href="#Hint:"> </a></h6><h6 id="var-=-&quot;B&quot;">var = "B"<a class="anchor-link" href="#var-=-&quot;B&quot;"> </a></h6><h6 id="name-=-&quot;SmithB&quot;">name = "SmithB"<a class="anchor-link" href="#name-=-&quot;SmithB&quot;"> </a></h6><hr>
+<h3 id="Test-2">Test 2<a class="anchor-link" href="#Test-2"> </a></h3>
+<pre><code>word1 &lt;- "computer"
+word2 &lt;- "textbooks"
+length1 &lt;- len(word1)/2
+length2 &lt;- len(word2)/3
+first &lt;- substring(word1, 2, len1)
+second &lt;- substring(word2, len2+3, len2)
+newWord &lt;- concat(first, second)
+DISPLAY(newWord)
+</code></pre>
+<hr>
+<h2 id="Answers">Answers<a class="anchor-link" href="#Answers"> </a></h2><h4 id="Test-1">Test 1<a class="anchor-link" href="#Test-1"> </a></h4><h5 id="Result:-&quot;SmithB@gmail.com&quot;">Result: "SmithB@gmail.com"<a class="anchor-link" href="#Result:-&quot;SmithB@gmail.com&quot;"> </a></h5><h4 id="Test-2">Test 2<a class="anchor-link" href="#Test-2"> </a></h4><h5 id="Result:-&quot;ompuook&quot;">Result: "ompuook"<a class="anchor-link" href="#Result:-&quot;ompuook&quot;"> </a></h5>
 </div>
 </div>
 </div>
