--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -40,6 +40,8 @@ Selection: Step 3
 Iteration: Step 4 
 
 ## 3.3 Video 2
+### Vocabulary
+
 - algorithm- finite set of instructions that accomplish a specific task, composed of sequencing, selection, and iteration. 
 - sequencing- outline or set of steps that we do and follow in order that they are given 
 - variable- you can store an actual value, the value of a variable in another variable, the result of an operation, or result of a procedural call
@@ -54,7 +56,7 @@ Practice: calculate and display average of 25, 43, and 18
 ## 3.3 Video 3
 
 ## 3.4 Video 1
-#### Big Idea: Strings
+### Big Idea: Strings
 
 #### Goal: To evaluate expressions that manipulate strings
 Vocab and Examples:
