--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -102,11 +102,11 @@
    "source": [
     "## 3.4 Video 1 Hacks\n",
     "\n",
-    "### String Homework\n",
+    " String Homework\n",
     "---------------------------------------------------------------\n",
     "\n",
     "\n",
-    "### Test 1\n",
+    "- Test 1\n",
     "\n",
     "    firstName <- \"Bob\"\n",
     "    lastName <- \"Smith\"\n",
@@ -115,14 +115,14 @@
     "    email <- concat(name, \"@gmail.com\")\n",
     "    DISPLAY(email)\n",
     "\n",
-    "What would the result be?\n",
+    "- What would the result be?\n",
     "\n",
-    "###### Hint:\n",
-    "###### var = \"B\"\n",
-    "###### name = \"SmithB\"\n",
+    " Hint:\n",
+    " var = \"B\"\n",
+    " name = \"SmithB\"\n",
     "\n",
     "---------------------------------------------------------------\n",
-    "### Test 2\n",
+    "- Test 2\n",
     "\n",
     "    word1 <- \"computer\"\n",
     "    word2 <- \"textbooks\"\n",
@@ -135,11 +135,11 @@
     "---------------------------------------------------------------\n",
     "\n",
     "## Answers\n",
-    "#### Test 1\n",
-    "##### Result: \"SmithB@gmail.com\"\n",
+    " Test 1\n",
+    "- Result: \"SmithB@gmail.com\"\n",
     "\n",
-    "#### Test 2\n",
-    "##### Result: \"ompuook\"\n",
+    " Test 2\n",
+    "- Result: \"ompuook\"\n",
     "\n",
     "\n"
    ]
