--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -134,7 +134,7 @@
     "    DISPLAY(newWord)\n",
     "---------------------------------------------------------------\n",
     "\n",
-    "## Answers\n",
+    "### Answers\n",
     " Test 1\n",
     "- Result: \"SmithB@gmail.com\"\n",
     "\n",
