--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -92,6 +92,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Plan for Assignment: \n",
+    "- Explain the topic and then make practice problems like the one below for class to try, then I want to have them create their own CollegeBoard with certain requirements. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Practice Problem #1\n",
+    "a <-- 12\n",
+    "\n",
+    "b <-- 3\n",
+    "\n",
+    "c <-- 8\n",
+    "\n",
+    "d <-- 5\n",
+    "\n",
+    "a <-- b\n",
+    "\n",
+    "b <-- c + d\n",
+    "\n",
+    "d <-- b \n",
+    "\n",
+    "find the value for a, b, c, d "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.3 Video 3 Hacks\n",
     "\n"
    ]
