--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "## 3.4 Video 1 Hacks\n",
     "\n",
-    " String Homework\n",
+    "### String Homework\n",
     "---------------------------------------------------------------\n",
     "\n",
     "\n",
@@ -164,7 +164,7 @@
     "    DISPLAY(newWord)\n",
     "---------------------------------------------------------------\n",
     "\n",
-    "### Answers\n",
+    "#### Answers\n",
     " Test 1\n",
     "- Result: \"SmithB@gmail.com\"\n",
     "\n",
