--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -33,18 +33,26 @@
     }
    ],
    "source": [
-    "#These are all the steps that the computer goes through so this is sequencing\n",
-    "\n",
     "numbers = [0,1,2,3,4,5,6,7,8,9,10]\n",
     "evens = []\n",
     "\n",
-    "# This is selection where they go through the numbers and decide whether if it is even or not. \n",
     "for i in numbers:\n",
-    "    # This is iteration because they repeat the steps until they go through all the numbers in the list. \n",
     "    if (numbers[i] % 2 == 0):\n",
     "        evens.append(numbers[i])\n",
     "\n",
     "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answers 1\n",
+    "All the steps combined are sequencing\n",
+    "\n",
+    "The step \"for i in numbers:\" is iteration because they go through all the numbers.\n",
+    "\n",
+    "\"if (numbers[i] % 2 == 0)\" is selection because they sort each number to find the even ones."
    ]
   },
   {
@@ -65,19 +73,28 @@
     }
    ],
    "source": [
-    "# The objective is to make a pyramid of stars\n",
-    "# This is the sequence\n",
     "i = 1\n",
     "starString = \"*\"\n",
-    "# This is iteration because they repeat until i reaches 5\n",
     "while i <= 5:\n",
     "  j = 1\n",
-    "  # This is the selection where they decide what j is\n",
     "  while j <= i:\n",
     "    print (\"*\", end= \"\")\n",
     "    j += 1\n",
     "  print ()\n",
     "  i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Answers 2\n",
+    "\n",
+    "All the steps are a sequence\n",
+    "\n",
+    "\"While i <= 5:\" is iteration because they repeat until i reaches 5\n",
+    "\n",
+    "\"While j <= i:\" is selection because this is where they decide what j is"
    ]
   },
   {
