--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -55,6 +55,24 @@ Practice: calculate and display average of 25, 43, and 18
 = 28.667
 ## 3.3 Video 3
 
+### Mathematical Expressions
+
+#### Arithmetic Operators 
+
+A plus sign indicates addition: a + b
+A subtraction sign indicates subtraction: a - b
+An asterisk/star indicates multiplication: a * b
+A slash indicates division: a / b
+MOD represent the Modulus operator. Returns the value after division: a MOD b
+    ex: 
+    9 MOD 2 = 1
+
+##### Practice Problem
+
+![]({{site.baseurl}}/images/mod.png)
+
+answer: 29
+
 ## 3.4 Video 1
 ### Big Idea: Strings
 
