--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -52,7 +52,11 @@ Practice: calculate and display average of 25, 43, and 18
 - num 3 <-- 18
 - average <-- (num 1 + num 2 + num 3)/3 
 - display average 
-= 28.667
+<details closed>
+    <summary>Click for the answer!</summary>
+        28.667
+    </details>
+
 ## 3.3 Video 3
 
 ## 3.4 Video 1
