--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -47,16 +47,52 @@ Iteration: Step 4
 - variable- you can store an actual value, the value of a variable in another variable, the result of an operation, or result of a procedural call
 
 Practice: calculate and display average of 25, 43, and 18
-- num 1 <-- 25
-- num 2 <-- 43
-- num 3 <-- 18
-- average <-- (num 1 + num 2 + num 3)/3 
-- display average 
+num 1 ⟵ 25
+num 2 ⟵ 43
+num 3 ⟵ 18
+average ⟵ (num 1 + num 2 + num 3)/3 
+display average 
 <details closed>
     <summary>Click for the answer!</summary>
         28.667
     </details>
 
+Practice: consider the following code segment, which uses the variables a, b, c:
+a ⟵ 1
+b ⟵ 2
+c ⟵ 3
+a ⟵ b
+b ⟵ c
+display(a)
+display(c)
+- which is displayed as a result of running the code segment
+1. 1 1
+2. 1 2
+3. 2 3
+4. 3 2
+<details closed>
+    <summary>Click for the answer!</summary>
+        3. 2 3
+    </details>
+
+Practice: consider the following code segment
+s ⟵ 10
+l ⟵ 20
+a ⟵ 30 
+y ⟵ 40
+s ⟵ l
+l ⟵ a
+y ⟵ l
+a ⟵ s
+what is the value of a as a result of executing the code segment?
+1. 10 
+2. 20 
+3. 30 
+4. 40 
+<details closed>
+    <summary>Click for the answer!</summary>
+        2. 20
+    </details>
 ## 3.3 Video 3
 
 ### Mathematical Expressions
