--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.3 Video 2 Hacks\n",
+    "\n",
     "\n"
    ]
   },
@@ -109,30 +109,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plan for Assignment: \n",
-    "- Explain the topic and then make practice problems like the one below for class to try, then I want to have them create their own CollegeBoard with certain requirements. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Practice Problem #1\n",
-    "a <-- 12\n",
+    "## 3.3 Video 2 Hacks\n",
+    "### Practice Problems \n",
+    "1. given the following code segment below:\n",
     "\n",
-    "b <-- 3\n",
+    "a ⟵ 7\n",
     "\n",
-    "c <-- 8\n",
+    "b ⟵ 1\n",
     "\n",
-    "d <-- 5\n",
+    "c ⟵ 3\n",
     "\n",
-    "a <-- b\n",
+    "d ⟵ 4\n",
     "\n",
-    "b <-- c + d\n",
+    "a ⟵ b\n",
     "\n",
-    "d <-- b \n",
+    "b ⟵ c + d\n",
     "\n",
-    "find the value for a, b, c, d "
+    "d ⟵ b \n",
+    "\n",
+    "find the value for a, b, c, d \n",
+    "<details closed>\n",
+    "    <summary>Click for the answer!</summary>\n",
+    "       a = 1, b = 7, c = 3, d = 7\n",
+    "    </details>\n",
+    "\n",
+    "2. consider the following code segment:\n",
+    "\n",
+    "hot ⟵ true\n",
+    "\n",
+    "cold ⟵ false\n",
+    "\n",
+    "cold ⟵ hot \n",
+    "\n",
+    "hot ⟵ cold\n",
+    "\n",
+    "what are the values of hot and cold after executing the code segment? \n",
+    "1. the value of hot is true, the value of cold is true \n",
+    "2. the value of hot is false, the value of cold is true\n",
+    "3. the value of hot is true, the value of cold is false\n",
+    "4. the value of hot is false, the value of cold is false \n",
+    "<details closed>\n",
+    "    <summary>Click for the answer!</summary>\n",
+    "        1. the value of hot is true, the value of cold is true \n",
+    "    </details>\n",
+    "\n",
+    "3. Make TWO of your own code segments that contain at least 5 defined variables, then provide the answer and EXPLAIN why your answer is correct. "
    ]
   },
   {
