--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -43,6 +43,8 @@ Iteration: Step 4
 ### Vocabulary
 
 - algorithm- finite set of instructions that accomplish a specific task, composed of sequencing, selection, and iteration. 
+- selection- a section of code is run only if a condition is met. 
+- iteration- repeating steps or instructions over and over again
 - sequencing- outline or set of steps that we do and follow in order that they are given 
 - variable- you can store an actual value, the value of a variable in another variable, the result of an operation, or result of a procedural call
 
