--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Hacks\n",
     "- title: Homework Assignment for 3.3-4\n",
-    "- toc: true\n",
-    "- tags: [hw]"
+    "- tags: [hw]\n",
+    "- toc: true"
    ]
   },
   {
