--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -160,6 +160,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "4. Sequencing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = 3\n",
+    "num2 = 1\n",
+    "num3 = 5\n",
+    "num1 = num2 + num3      \n",
+    "num2 = num1 + num3      # num2 is now the new num1 + num3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the value of num1 and num2?\n",
+    "<details closed>\n",
+    "    <summary>Click for the answer!</summary>\n",
+    "        num1 = 6, num2 = 11\n",
+    "    </details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.3 Video 3 Hacks\n",
     "\n"
    ]
