--- a/_posts/2022-11-16-3.3-4-Notes.md
+++ b/_posts/2022-11-16-3.3-4-Notes.md
@@ -140,7 +140,10 @@ MOD represent the Modulus operator. Returns the value after division: a MOD b
 
 ![]({{site.baseurl}}/images/mod.png)
 
-answer: 29
+<details closed>
+    <summary>Click for the answer!</summary>
+    answer: 29
+    </details>
 
 ## 3.4 Video 1
 ### Big Idea: Strings
