--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -7,7 +7,8 @@
     "# Hacks\n",
     "- title: Homework Assignment for 3.3-4\n",
     "- tags: [hw]\n",
-    "- toc: true"
+    "- toc: true\n",
+    "- comments: true"
    ]
   },
   {
