--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -136,7 +136,7 @@
     "---------------------------------------------------------------\n",
     "\n",
     "\n",
-    "- Test 1\n",
+    "Test 1\n",
     "\n",
     "    firstName <- \"Bob\"\n",
     "    lastName <- \"Smith\"\n",
@@ -152,7 +152,7 @@
     " name = \"SmithB\"\n",
     "\n",
     "---------------------------------------------------------------\n",
-    "- Test 2\n",
+    "Test 2\n",
     "\n",
     "    word1 <- \"computer\"\n",
     "    word2 <- \"textbooks\"\n",
