--- a/_posts/2022-11-17-Hacks.md
+++ b/_posts/2022-11-17-Hacks.md
@@ -146,15 +146,17 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="3.4-Video-1-Hacks">3.4 Video 1 Hacks<a class="anchor-link" href="#3.4-Video-1-Hacks"> </a></h2><h2 id="-String-Homework"> String Homework<a class="anchor-link" href="#-String-Homework"> </a></h2><ul>
-<li><p>Test 1</p>
-<p>firstName &lt;- "Bob"
-  lastName &lt;- "Smith"
-  var &lt;- substring(firstName, 1, 1)
-  name &lt;- concat(lastName, var)
-  email &lt;- concat(name, "@gmail.com")
-  DISPLAY(email)</p>
-</li>
+<h2 id="3.4-Video-1-Hacks">3.4 Video 1 Hacks<a class="anchor-link" href="#3.4-Video-1-Hacks"> </a></h2><h2 id="-String-Homework"> String Homework<a class="anchor-link" href="#-String-Homework"> </a></h2><p>Test 1</p>
+
+<pre><code>firstName &lt;- "Bob"
+lastName &lt;- "Smith"
+var &lt;- substring(firstName, 1, 1)
+name &lt;- concat(lastName, var)
+email &lt;- concat(name, "@gmail.com")
+DISPLAY(email)
+
+</code></pre>
+<ul>
 <li><p>What would the result be?</p>
 <p>Hint:
 var = "B"
@@ -162,18 +164,17 @@ name = "SmithB"</p>
 </li>
 </ul>
 <hr>
-<ul>
-<li><p>Test 2</p>
-<p>word1 &lt;- "computer"
-  word2 &lt;- "textbooks"
-  length1 &lt;- len(word1)/2
-  length2 &lt;- len(word2)/3
-  first &lt;- substring(word1, 2, len1)
-  second &lt;- substring(word2, len2+3, len2)
-  newWord &lt;- concat(first, second)
-  DISPLAY(newWord)</p>
-</li>
-</ul>
+<p>Test 2</p>
+
+<pre><code>word1 &lt;- "computer"
+word2 &lt;- "textbooks"
+length1 &lt;- len(word1)/2
+length2 &lt;- len(word2)/3
+first &lt;- substring(word1, 2, len1)
+second &lt;- substring(word2, len2+3, len2)
+newWord &lt;- concat(first, second)
+DISPLAY(newWord)
+</code></pre>
 <hr>
 <h3 id="Answers">Answers<a class="anchor-link" href="#Answers"> </a></h3><p>Test 1</p>
 <ul>
