--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -193,7 +193,8 @@
    "metadata": {},
    "source": [
     "## 3.3 Video 3 Hacks\n",
-    "\n"
+    "\n",
+    "![]({{site.baseurl}}/images/Screen Shot 2022-11-29 at 1.34.26 PM.png)\n"
    ]
   },
   {
