--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "## 3.3 Video 3 Hacks\n",
     "\n",
-    "![]({{site.baseurl}}/images/Screen Shot 2022-11-29 at 1.34.26 PM.png)\n"
+    "![]({{site.baseurl}}/images/Screen-Shot-2022-11-29-at-1.34.26-PM.png)"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "---------------------------------------------------------------\n",
     "\n",
     "\n",
-    "Test 1\n",
+    "- Test 1\n",
     "\n",
     "    firstName <- \"Bob\"\n",
     "    lastName <- \"Smith\"\n",
@@ -223,7 +223,7 @@
     " name = \"SmithB\"\n",
     "\n",
     "---------------------------------------------------------------\n",
-    "Test 2\n",
+    "- Test 2\n",
     "\n",
     "    word1 <- \"computer\"\n",
     "    word2 <- \"textbooks\"\n",
