--- a/_posts/2022-12-01-Grades.md
+++ b/_posts/2022-12-01-Grades.md
@@ -16,6 +16,6 @@ layout: default
     <td>Edwin</td>
     <td>0.9/1</td>
     <td>You did all the work, but did not provide many explanations.</td>
-    <td>Haeryn<td>
-    <td>https://edwinkuttappi.github.io/fastpage1/week14/tri2/2022/11/29/Section3&4.html<td>
+    <td>Haeryn</td>
+    <td>https://edwinkuttappi.github.io/fastpage1/week14/tri2/2022/11/29/Section3&4.html</td>
   </tr>
