--- a/_notebooks/2022-11-17-Hacks.ipynb
+++ b/_notebooks/2022-11-17-Hacks.ipynb
@@ -15,6 +15,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Blog about Grades\n",
+    "\n",
+    "I got a 1 on the 3.1-2 Hacks, because I did the extra binary hacks. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.3 Video 1 Hacks\n",
     "\n",
     "Show two examples and label which one is sequence, selection, iteration"
